k8s/web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cm-web-app
  namespace: cm-games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cm-web-app
  template:
    metadata:
      labels:
        app: cm-web-app
    spec:
      tolerations:
        - key: "node.kubernetes.io/disk-pressure"
          operator: "Exists"
          effect: "NoSchedule"
      serviceAccountName: cm-orchestrator
      containers:
        - name: web-app
          image: thejoefriel/cm-web-app:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-data
              mountPath: /data
      volumes:
        - name: app-data
          hostPath:
            path: /data/cm-app
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: cm-web-app
  namespace: cm-games
spec:
  selector:
    app: cm-web-app
  ports:
    - port: 3000
      targetPort: 3000
